@@ -166,33 +166,10 @@ proc fmt_postprocess {text} {text_postprocess $text}
 
 
 ################################################################
-# Implementatations of the formatting commands.
+# Implementations of the formatting commands.
 
 c_pass 1 fmt_plain_text {text} NOP
-c_pass 2 fmt_plain_text {text} {
-    #puts_stderr "<<fmt_plain_text>>"
-
-    if  {[IsOff]} {return}
-
-    # Note: Whenever we get plain text it is possible that a macro for
-    # visual markup actually generated output before the expander got
-    # to the current text. This output was captured by the expander in
-    # its current context. Given the current organization of the
-    # engine we have to retrieve this formatted text from the expander
-    # or it will be lost. This is the purpose of the 'ctopandclear',
-    # which retrieves the data and also clears the capture buffer. The
-    # latter to prevent us from retrieving it agasin later, after the
-    # next macro added more data.
-
-    set text [ex_ctopandclear]$text
-
-    # ... TODO ... Handling of example => verbatim
-
-    if {[string length [string trim $text]] == 0} return
-
-    Text $text
-    return
-}
+c_pass 2 fmt_plain_text {text} {text_plain_text $text}
 
 c_pass 1 fmt_manpage_begin {title section version} NOP
 c_pass 2 fmt_manpage_begin {title section version} {
